force-app/main/default/objects/Opportunity/validationRules/Date_start.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_start</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Start__c &lt;TODAY()</errorConditionFormula>
    <errorMessage>The project start date cannot be less than the current date</errorMessage>
</ValidationRule>